--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -3,7 +3,7 @@
   <display-name>hcia</display-name>
   
   <welcome-file-list>
-    <welcome-file>index.xhtml</welcome-file>
+    <welcome-file>home.xhtml</welcome-file>
   </welcome-file-list>
   
   <servlet>
