--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 	
 	<dependency>
 	  <groupId>org.primefaces.themes</groupId>
-	  <artifactId>delta</artifactId>
+	  <artifactId>bootstrap</artifactId>
 	  <version>1.0.10</version>
 	</dependency>
 	
