--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -17,7 +17,7 @@
   </servlet-mapping>
     <context-param>
     <param-name>primefaces.THEME</param-name>
-    <param-value>delta</param-value>
+    <param-value>bootstrap</param-value>
   </context-param>
   <context-param>
    <param-name>facelets.SKIP_COMMENTS</param-name>
