--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
 	  <artifactId>bootstrap</artifactId>
 	  <version>1.0.10</version>
 	</dependency>
+  
+      <!-- https://mvnrepository.com/artifact/xerces/xercesImpl -->
+    <dependency>
+        <groupId>xerces</groupId>
+        <artifactId>xercesImpl</artifactId>
+        <version>2.8.1</version>
+    </dependency>
 	
   </dependencies>
   <build>
