--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.6.3</version>
 		</dependency>
+		<dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>5.1.39</version>
+		</dependency>
 			<!-- https://mvnrepository.com/artifact/org.webjars/d3js -->
 		<dependency>
 			<groupId>org.webjars</groupId>
