--- a/src/main/resources/dbconfig.properties
+++ b/src/main/resources/dbconfig.properties
@@ -1,4 +1,4 @@
 dbUsername=root
-dbPassword=hakiem09
+dbPassword=26031812
 dbDriver=com.mysql.jdbc.Driver
-dbUrl=jdbc:mysql://localhost/login_database?useSSL=false
+dbUrl=jdbc:mysql://localhost:3306/login_database?useSSL=false
